package JavaChallnege.bread;

/**
 * @author nl_konishi
 * 
 *         パンインターフェース
 */
public interface Bread {

	/**
	 * パンの種類を取得する。<br>
	 * <br>
	 * 
	 * @return パンの種類
	 */
	String getKind();
}
