
PlantUML用のドキュメント

@startuml

title 課題

class SuperMarket {
	-SuperMarket superMarket
	-List<Bread> stock
	+getSuperMarketInstance(): SuperMarket
	+getStock(): List<Bread>
	+order(int[]): void
	-createBreadOrder(int[]): List<BreadOrder>
}

Class BreadOrder {
	-Enum kind
	-int orderNumber
	+BreadOrder(String kind,int orderNumber)
	+getKind() :BreadKind
	+getOrderNumber(): int
}

Enum BreadKind {
	BEAN_PASTE_BREAD
	PLAIN_BREAD
}

class WholeSaler{
	-wholeSaler wholeSaler
	+getWholeSaler(): WholeSeler
	+order(List<BreadOrder>):List<Bread>
}

class BreadFactory {
	-BreadFactory breadFactory
	-List<Bread> stock
	+getBreadFactory(): BreadFactory
	+makeBreads(List<BreadOrder>): List<Bread>
}

interface Bread {
 +getKind(): String
}

class BeanPasteBread {
	-kind: BreadKind
	+getKind(): String
	+toString(): String
}

class PlainBread{
	-kind: BreadKind
	+getKind(): String
	+toString(): String
}

SuperMarket --> WholeSaler: 発注
SuperMarket <-- WholeSaler: 納品
SuperMarket --> BreadOrder : 作成
BreadOrder --> BreadKind: 参照

Bread <|-- BeanPasteBread: 実装
Bread <|-- PlainBread: 実装

BreadFactory --> Bread: 製造

BreadFactory --> WholeSaler: 納品
BreadFactory <-- WholeSaler: 発注

BeanPasteBread --> BreadKind: 所属
PlainBread --> BreadKind: 所属

@enduml
